# pve-installer

./: .gitignore  Cargo.toml  Makefile  ProxmoxInstallerSetup-pbs.pm  ProxmoxInstallerSetup-pmg.pm  ProxmoxInstallerSetup-pve.pm  ProxmoxInstallerSetup.pm  Xdefaults  changelog.Debian  checktime  conffiles  control  copyright  country.pl  fake-start-stop-daemon  policy-disable-rc.d  proxinstall  proxlogo.xpm  proxmox-low-level-installer  spice-vdagent.sh  unconfigured.sh  xinitrc  xorg.conf.fbdev
.cargo/: config.toml
.github/workflows/: build.yml
Proxmox/: Install.pm  Log.pm  Makefile  Sys.pm  UI.pm
Proxmox/Install/: Config.pm  Env.pm  ISOEnv.pm  RunEnv.pm  Setup.pm  StorageConfig.pm
Proxmox/Sys/: Block.pm  Command.pm  File.pm  Net.pm  Udev.pm  ZFS.pm
Proxmox/UI/: Base.pm  Gtk3.pm  StdIO.pm
banner/: Makefile
debian/: changelog  control  install  pbs-installer.install  pmg-installer.install  proxmox-auto-install-assistant.install  proxmox-first-boot.install  pve-installer.install  rules
html/: Makefile  ack_template.htm  country.htm  extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  extract4-virus.htm  fail.htm  ipconf.htm  license.htm  nohds.htm  nonics.htm  page1.htm  passwd.htm  pve-installer.css  success.htm
html-common/: Makefile  ack_template.htm  country.htm  ipconf.htm  nohds.htm  success.htm
html-pbs/: extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  extract4-virus.htm  fail.htm  page1.htm  passwd.htm  success.htm
html-pmg/: extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  extract4-virus.htm  fail.htm  page1.htm  passwd.htm  success.htm
html-pve/: Makefile  extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  extract4-virus.htm  fail.htm  page1.htm  passwd.htm  success.htm
html/pbs/: extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  extract4-virus.htm  passwd.htm
html/pdm/: extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  extract4-virus.htm  page1.htm  passwd.htm
html/pmg/: extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  passwd.htm
html/pve/: extract1-license.htm  extract2-rulesystem.htm  extract3-spam.htm  extract4-virus.htm  page1.htm  passwd.htm
proxmox-auto-install-assistant/: Cargo.toml
proxmox-auto-install-assistant/src/: main.rs
proxmox-auto-installer/: Cargo.toml
proxmox-auto-installer/src/: answer.rs  lib.rs  log.rs  sysinfo.rs  udevinfo.rs  utils.rs
proxmox-auto-installer/src/fetch_plugins/: http.rs  mod.rs  partition.rs  utils.rs
proxmox-auto-installer/src/fetch_plugins/utils/: mod.rs  post.rs  sysinfo.rs
proxmox-auto-installer/tests/: parse-answer.rs
proxmox-auto-installer/tests/resources/: iso-info.json  locales.json  run-env-info.json  run-env-udev.json
proxmox-auto-installer/tests/resources/parse_answer/: btrfs.json  btrfs.toml  btrfs_raid_level_uppercase.json  btrfs_raid_level_uppercase.toml  disk_match.json  disk_match.toml  disk_match_all.json  disk_match_all.toml  disk_match_any.json  disk_match_any.toml  first-boot.json  first-boot.toml  first_boot.json  first_boot.toml  fqdn_from_dhcp.json  fqdn_from_dhcp.toml  fqdn_from_dhcp_empty_dhcp_domain_setting.toml  full_fqdn_from_dhcp_with_default_domain.json  full_fqdn_from_dhcp_with_default_domain.toml  hashed_root_password.json  hashed_root_password.toml  ipv4_and_subnet_31.json  ipv4_and_subnet_31.toml  minimal.json  minimal.toml  network_interface_pinning.toml  network_interface_pinning_uppercase_mac_address.json  network_interface_pinning_uppercase_mac_address.toml  nic_matching.json  nic_matching.toml  no_network.json  no_network.run-env.json  no_network.toml  readme  specific_nic.json  specific_nic.toml  zfs.json  zfs.toml  zfs_raid_level_uppercase.json  zfs_raid_level_uppercase.toml
proxmox-auto-installer/tests/resources/parse_answer_fail/: both_password_and_hashed_set.json  both_password_and_hashed_set.toml  btrfs_raid_single_disk.json  btrfs_raid_single_disk.toml  duplicate_disk.json  duplicate_disk.toml  fqdn_from_dhcp_no_default_domain.json  fqdn_from_dhcp_no_default_domain.run-env.json  fqdn_hostname_only.json  fqdn_hostname_only.toml  ipv4_and_subnet_addr_is_network.json  ipv4_and_subnet_addr_is_network.toml  ipv4_and_subnet_mask_33.json  ipv4_and_subnet_mask_33.toml  lvm_swapsize_greater_than_hdsize.json  lvm_swapsize_greater_than_hdsize.toml  network_interface_pinning_overlong_interface_name.json  network_interface_pinning_overlong_interface_name.toml  no_fqdn_from_dhcp.json  no_fqdn_from_dhcp.run-env.json  no_fqdn_from_dhcp.toml  no_root_password_set.json  no_root_password_set.toml  short_password.json  short_password.toml  zfs_raid_single_disk.json  zfs_raid_single_disk.toml
proxmox-autoinst-helper/: Cargo.toml
proxmox-autoinst-helper/src/: main.rs
proxmox-chroot/: Cargo.toml
proxmox-chroot/src/: main.rs
proxmox-fetch-answer/: Cargo.toml
proxmox-fetch-answer/src/: main.rs
proxmox-fetch-answer/src/fetch_plugins/: http.rs  mod.rs  partition.rs
proxmox-fetch-answer/src/fetch_plugins/utils/: mod.rs  post.rs
proxmox-first-boot/: Makefile  proxmox-first-boot-subscription
proxmox-first-boot/etc/: proxmox-first-boot-multi-user.service  proxmox-first-boot-network-online.service  proxmox-first-boot-network-pre.service  proxmox-first-boot-subscription.service
proxmox-installer-common/: Cargo.toml
proxmox-installer-common/src/: cli.rs  disk_checks.rs  dmi.rs  http.rs  lib.rs  options.rs  setup.rs  sysinfo.rs  utils.rs
proxmox-post-hook/: Cargo.toml
proxmox-post-hook/src/: main.rs
proxmox-tui-installer/: .gitattributes  .gitignore  Cargo.toml  README.md
proxmox-tui-installer/.cargo/: config
proxmox-tui-installer/src/: main.rs  options.rs  setup.rs  system.rs  utils.rs  views.rs
proxmox-tui-installer/src/views/: bootdisk.rs  install_progress.rs  mod.rs  network.rs  tabbed_view.rs  table_view.rs  timezone.rs
test/: Makefile  parse-fqdn.pl  parse-kernel-cmdline.pl  run-command.pl  ui2-stdio.pl  validate-link-pin-map.pl  zfs-arc-max.pl  zfs-get-pool-list.pl
