[workspace.package]
version = "9.1.2"
edition = "2024"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=pve-installer.git"

[workspace]
resolver = "2"
members = [
    "proxmox-auto-installer",
    "proxmox-auto-install-assistant",
    "proxmox-chroot",
    "proxmox-fetch-answer",
    "proxmox-installer-common",
    "proxmox-tui-installer",
    "proxmox-post-hook",
]

[workspace.dependencies]
anyhow = "1.0"
log = "0.4.20"
pico-args = "0.5"
regex = "1.7"
serde = "1.0"
serde_json = "1.0"
serde_plain = "1.0"
toml = "0.8"
proxmox-auto-installer.path = "./proxmox-auto-installer"
proxmox-installer-common.path = "./proxmox-installer-common"
