[package]
name = "proxmox-auto-install-assistant"
version.workspace = true
edition.workspace = true
authors = [
    "Aaron Lauterer <a.lauterer@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow.workspace = true
log.workspace = true
proxmox-installer-common.workspace = true
proxmox-auto-installer.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
regex.workspace = true

clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
