[package]
name = "proxmox-auto-install-assistant"
version.workspace = true
edition.workspace = true
authors = [
    "Aaron Lauterer <a.lauterer@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow.workspace = true
proxmox-auto-installer.workspace = true
proxmox-installer-common = { workspace = true, features = [ "cli" ] }
serde_json.workspace = true
toml.workspace = true

proxmox-sys = { version = "1.0.0", features = [ "crypt" ] }
glob = "0.3"
flate2 = "1.1"
zstd = { version = "0.13", default-features = false }
