[package]
name = "proxmox-auto-installer"
version = "0.1.0"
edition = "2021"
authors = [
    "Aaron Lauterer <a.lauterer@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
log = "0.4.20"
proxmox-installer-common = { path = "../proxmox-installer-common" }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
toml = "0.8"
