[package]
name = "proxmox-auto-installer"
version = "0.1.0"
edition = "2021"
authors = [
    "Aaron Lauterer <a.lauterer@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow.workspace = true
log.workspace = true
proxmox-installer-common.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
toml.workspace = true

clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
