[package]
name = "proxmox-chroot"
version.workspace = true
edition = "2021"
authors = [ "Aaron Lauterer <a.lauterer@proxmox.com>" ]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow.workspace = true
proxmox-installer-common.workspace = true
serde_json.workspace = true
regex.workspace = true

clap = { version = "4.0", features = ["derive"] }
nix = "0.26.1"
