[package]
name = "proxmox-chroot"
version.workspace = true
edition.workspace = true
authors = [ "Aaron Lauterer <a.lauterer@proxmox.com>" ]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow.workspace = true
regex.workspace = true
proxmox-installer-common = { workspace = true, features = [ "cli" ] }
serde_json.workspace = true
