[package]
name = "proxmox-installer-common"
version = "0.1.0"
edition = "2021"
authors = [ "Aaron Lauterer <a.lauterer@proxmox.com>" ]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
