[package]
name = "proxmox-installer-common"
version.workspace = true
edition.workspace = true
authors = [ "Aaron Lauterer <a.lauterer@proxmox.com>" ]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
serde_plain.workspace = true

# `http` feature
hex = { version = "0.4", optional = true }
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.21", features = [ "dangerous_configuration" ], optional = true }
rustls-native-certs = { version = "0.6", optional = true }
sha2 = { version = "0.10", optional = true }
ureq = { version = "2.6", features = [ "native-certs", "native-tls" ], optional = true }

# `cli` feature
pico-args = { workspace = true, optional = true }

[features]
http = [
    "dep:hex",
    "dep:native-tls",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:sha2",
    "dep:ureq"
]
cli = [ "dep:pico-args" ]

[dev-dependencies]
pretty_assertions = "1.4"
