[package]
name = "proxmox-post-hook"
version.workspace = true
edition = "2021"
authors = [
    "Christoph Heiss <c.heiss@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
anyhow.workspace = true
proxmox-auto-installer.workspace = true
proxmox-installer-common = { workspace = true, features = ["http"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
