[package]
name = "proxmox-tui-installer"
version = "0.1.0"
edition = "2021"
authors = [ "Christoph Heiss <c.heiss@proxmox.com>" ]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
cursive = { version = "0.20.0", default-features = false, features = ["termion-backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"

proxmox-sys = "0.5.0"
