[package]
name = "proxmox-tui-installer"
version = "0.1.0"
edition = "2021"
authors = [ "Christoph Heiss <c.heiss@proxmox.com>" ]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
proxmox-installer-common.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex.workspace = true

cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
