[package]
name = "proxmox-tui-installer"
version.workspace = true
edition.workspace = true
authors = [ "Christoph Heiss <c.heiss@proxmox.com>" ]
license = "AGPL-3"
exclude = [ "build", "debian" ]
homepage = "https://www.proxmox.com"

[dependencies]
proxmox-installer-common.workspace = true
serde_json.workspace = true

cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
